--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -110,3 +110,29 @@
     margin-right: 1.5rem;
   }
 }
+
+//////////////////////////////////////////
+// Side Nav
+.side-nav {
+  &__item {
+
+  }
+
+  &__link {
+    
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+  }
+}
+
+//////////////////////////////////////////
+// CopyRight
+.copy {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-dark-4);
+}
