--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -114,17 +114,58 @@
 //////////////////////////////////////////
 // Side Nav
 .side-nav {
-  &__item {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
 
+  &__item {
+    position: relative;
+    &:not(:last-child){
+      margin-bottom: .5rem;
+    }
   }
 
-  &__link {
-    
+  &__item::before {
+    content: "";
+    background-color: var(--color-primary);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    transform: scaleY(0);
+    transition: transform .2s,
+                width .2s cubic-bezier(1, 0, 0, 1) .4s;
+  }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:visited,
+  &__link:link {
+    position: relative;
+    z-index: 100;
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    fill: currentColor;
+    margin-right: 2rem;
   }
 }
 
