--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -177,3 +177,13 @@
   padding: 2.5rem;
   color: var(--color-grey-dark-4);
 }
+
+//////////////////////////////////////////
+// Gallery
+.gallery {
+  display: flex;
+  &__photo{
+    width: 100%;
+    display: block;
+  }
+}
