--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -192,10 +192,20 @@
 // Overview
 .overview{
   display: flex;
-  &__heading{}
+  border-bottom: 1px solid var(--color-grey-light-2);
+  align-items: center;
+
+  &__heading{
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+  }
 
   &__stars {
     margin-right: auto;
+    display: flex;
   }
   
   &__icon-star,
@@ -205,12 +215,77 @@
     fill: var(--color-primary);
   }
 
-  &__location {}
+  &__icon-location {
+    margin-right: .5rem;
+  }
 
-  &__rating{}
+  &__location {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+  }
 
-  &__rating-count{}
+  &__rating{
+    align-self: stretch;
+    background-color: var(--color-primary);
+    color: var(--color-grey-light-1);
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-  &__rating-average{}
+  &__rating-average{
+    font-size: 2.25rem;
+    font-weight: 300;
+    margin-bottom: -5px;
+  }
 
+  &__rating-count{
+    font-size: .8rem;
+    text-transform: uppercase;
+  }
+
+}
+
+//////////////////////////////////////////
+// Button: Inline
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s;
+  
+  &:hover {
+    color: var(--color-grey-dark-1);
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
+
+@keyframes pulsate {
+  0%{
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50%{
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, .25);
+  }
+
+  100%{
+    transform: scale(1);
+    box-shadow: none;
+  }
 }
