--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,10 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largerst: 75em;     //1200px
+$bp-large: 68.75em;     //1100px
+$bp-medium: 56.25em;    //900px
+
 * {
   margin: 0;
   padding: 0;
@@ -26,8 +30,11 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; //10px
   box-sizing: border-box;
+  @media only screen and (max-width: $bp-large ) {
+    font-size: 50%; //08px
+  }
 }
 
 body {
