--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -118,10 +118,22 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+  
   &__item {
     position: relative;
     &:not(:last-child){
       margin-bottom: .5rem;
+      @media only screen and (max-width: $bp-medium) {
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
 
@@ -159,6 +171,10 @@
     padding: 1.5rem 3rem;
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+    }
   }
 
   &__icon {
@@ -176,6 +192,9 @@
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-dark-4);
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 //////////////////////////////////////////
@@ -345,9 +364,9 @@
   align-items: center;
   justify-content: space-between;
 
-  &__count {}
-
-  &__friends {}
+  &__friends {
+    display: flex;
+  }
 
   &__photo {
     box-sizing: content-box;
@@ -356,7 +375,7 @@
     border-radius: 50%;
     border: 2px solid #FFF;
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -370,6 +389,12 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 2.5rem;
+  }
+
   &__text{
     margin-bottom: 2rem;
     z-index: 100;
@@ -427,6 +452,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
