more media queries

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -18,6 +18,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest ) {
+    flex-wrap: wrap;
+    height: 10rem;
+    align-content: space-around;
+  }
 }
 
 .content {
@@ -49,6 +55,9 @@
   @media only screen and (max-width: $bp-medium) {
     padding: 2rem;
   }
+  @media only screen and (max-width: $bp-small ) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -60,6 +69,10 @@
   @media only screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-right: 2rem;
+  }
+  @media only screen and (max-width: $bp-large ) {
+    margin-right: 0;
+    margin-bottom: 2rem;
   }
 }
 
