--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -12,6 +12,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media only screen and (max-width: $bp-smallest ) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -175,6 +182,12 @@
     @media only screen and (max-width: $bp-medium) {
       justify-content: center;
     }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem .5rem;
+    }
+    
   }
 
   &__icon {
@@ -182,6 +195,12 @@
     height: 1.75rem;
     fill: currentColor;
     margin-right: 2rem;
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: .5rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -220,6 +239,11 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;  
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -254,17 +278,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average{
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -5px;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count{
     font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: .5rem;
+    }
   }
 
 }
@@ -393,6 +429,10 @@
   @media only screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-bottom: 2.5rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    align-self: stretch;
   }
 
   &__text{
