--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -244,6 +244,11 @@
       font-size: 1.8rem;  
       padding: 1.25rem 2rem;
     }
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.5rem;  
+      padding: 1.25rem 1rem;
+    }
   }
 
   &__stars {
@@ -256,6 +261,12 @@
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-primary);
+
+    @media only screen and (max-width: $bp-smallest) {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+    
   }
 
   &__icon-location {
@@ -266,6 +277,10 @@
     display: flex;
     align-items: center;
     font-size: 1.2rem;
+
+    @media only screen and (max-width: $bp-smallest) {
+      margin-left: 1rem;
+    }
   }
 
   &__rating{
@@ -282,6 +297,10 @@
     @media only screen and (max-width: $bp-small) {
       padding: 0 1.5rem;
     }
+
+    @media only screen and (max-width: $bp-smallest) {
+      text-align: center;
+    }
   }
 
   &__rating-average{
@@ -291,6 +310,10 @@
 
     @media only screen and (max-width: $bp-small) {
       font-size: 1.8rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      margin-bottom: -2px;
     }
   }
 
@@ -382,7 +405,6 @@
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    fill: var(--color-primary);
     background-color: var(--color-primary);
     mask-image: url(../img/chevron-thin-right.svg);
     -webkit-mask-image: url(../img/chevron-thin-right.svg);
