--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -405,11 +405,18 @@
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    background-color: var(--color-primary);
-    mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
-    -webkit-mask-size: cover;
+
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
+    
+    @supports (mask-image: url()) or (-webkit-mask-image: url()) {
+      background-color: var(--color-primary);
+      mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      -webkit-mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
